app/src/main/java/com/example/maxim_project/ui/theme/Color.kt
package com.example.maxim_project.ui.theme

import androidx.compose.ui.graphics.Color

// ─── DESIGN TOKENS: ChatBubble Light × Maxim Yellow ───────────────────
// Canvas & Surface
val Canvas       = Color(0xFFFAFAF8)   // warm white background
val Surface      = Color(0xFFF3F4F6)   // received-bubble surface
val SurfaceElev  = Color(0xFFE9EBEF)   // elevated surface
val Hairline     = Color(0xFFD1D5DB)   // light border / divider

// Text
val TextPrimary  = Color(0xFF111118)   // near-black
val TextBody     = Color(0xFF4B5563)   // medium gray
val TextMuted    = Color(0xFF9CA3AF)   // cool gray
val TextDim      = Color(0xFFC4C9D4)   // very light

// Maxim Brand
val MaximYellow    = Color(0xFFF4EC04) // primary CTA — brand yellow
val MaximGold      = Color(0xFFFBD32C) // warm gold
val MaximDarkGold  = Color(0xFF6C5A25) // logo, warm accents
val Terracotta     = Color(0xFF8C5C4C) // food category
val Sand           = Color(0xFFD4A373) // wallet/profile tint

// Semantic
val Green   = Color(0xFF22C55E) // success, online, sent
val Blue    = Color(0xFF3B82F6) // CS, delivery, links
val Purple  = Color(0xFFA855F7) // premium, referral
val Error   = Color(0xFFEF4444) // error
val Warning = Color(0xFFF59E0B) // warning

// Derived tints (light-bg variants)
val YellowLight    = Color(0x2EF4EC04)
val GoldLight      = Color(0x24FBD32C)
val BlueLight      = Color(0x1A3B82F6)
val GreenLight     = Color(0x1A22C55E)
val TerracottaLight= Color(0x178C5C4C)
val PurpleLight    = Color(0x1AA855F7)
val ErrorLight     = Color(0x14EF4444)
val SandLight      = Color(0x1FD4A373)